# coding-tools-mcp

./: .gitignore  BENCHMARK.md  COMPLIANCE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: compliance.yml  docker-smoke.yml  swebench-lite.yml
benchmarks/: README.md  real_workloads.py  runtime_latency.py
benchmarks/dogfood/: mcp_deterministic_runner.py
benchmarks/swebench/: README.md  generate_reference_predictions.py  run_smoke.py
codex_tool_runtime_mcp/: __init__.py  server.py
coding_tools_mcp/: __init__.py  server.py
docs/: boundary-findings.md  ci-and-tests.md  competitive-analysis.md  dogfood.md  limitations.md  mcp-client-config.md  profile-v0.1.md  quickstart.md  remote-mcp.md  swe-bench.md  tools-and-schemas.md  troubleshooting.md
docs/dogfood/: codex-on-mcp-transcript.json
docs/swebench/: README.md
reports/: final.md
reports/benchmark/: mcp-latency.json  mcp-latency.md  real-workloads.json  real-workloads.md  swebench-official-attempt.json  swebench-official-attempt.md  swebench-regression.json  swebench-regression.md
reports/benchmark/real-workloads/raw/: go-uuid-git-clone.json  go-uuid-git-head.json  go-uuid-server.stderr.txt  monorepo-changesets-exec-allow-roots.txt  monorepo-changesets-git-clone.json  node-mime-types-git-clone.json  python-click-git-clone.json  rust-itoa-git-clone.json  rust-itoa-git-head.json  rust-itoa-server.stderr.txt
reports/benchmark/swebench-official-attempt/raw/: pip-install-swebench.json  pip-install-swebench.stderr.txt  pip-install-swebench.stdout.txt  swebench-help.json  swebench-help.stderr.txt
reports/benchmark/swebench-reference-predictions/: baseline_reference.jsonl  candidate_reference.jsonl  metadata.json
reports/benchmark/swebench-regression/raw/: environment.json  swebench-help.json  swebench-help.stderr.txt
reports/compliance/: latest.json  latest.md
reports/dogfood/: codex-on-mcp.json  codex-on-mcp.md
reports/subagents/: implementation.md
scripts/: install.sh  tunnel-cloudflared.sh  tunnel-common.sh  tunnel-devtunnel.sh  tunnel-ngrok.sh  tunnel.sh
tests/compliance/: mcp_client.py  runner.py  test_compliance_report.py  test_docs_required.py  test_mcp_contract.py  test_runtime_helpers.py  test_schema_drift.py  test_security.py  test_tool_golden.py  test_windows_msvc_smoke.py
