[build-system]
requires = ["setuptools>=68,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-tools-mcp"
version = "0.1.6"
description = "Workspace-confined coding tools exposed as an MCP server."
requires-python = ">=3.11"
dependencies = [
  "PyJWT>=2.8",
]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Coding Tools MCP Contributors" }]

[project.urls]
Homepage = "https://github.com/xyTom/coding-tools-mcp"
Documentation = "https://github.com/xyTom/coding-tools-mcp/tree/main/docs"
Source = "https://github.com/xyTom/coding-tools-mcp"
Issues = "https://github.com/xyTom/coding-tools-mcp/issues"

[project.optional-dependencies]
dev = [
  "mypy>=2.1,<2.2",
  "ruff>=0.15,<0.16",
  "typing_extensions>=4.12",
]
image = [
  "Pillow>=10.0",
]

[project.scripts]
coding-tools-mcp = "coding_tools_mcp.server:main"

[tool.setuptools.packages.find]
include = ["coding_tools_mcp*"]
